--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "autoprefixer": "^10.4.16",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "next": "15.3.3",
     "postcss": "^8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
+    "@types/node": "24.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "prettier": "^3.3.2"
