--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "autoprefixer": "^10.4.16",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
-    "next": "15.3.3",
+    "next": "15.4.7",
     "postcss": "^8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stripe": "^18.4.0",
     "tailwindcss": "^3.4.1",
     "yup": "^1.7.0"
   },
